# MSc-Project-Robotic-Grasping

./: README.md
rl_grasp/: CMakeLists.txt  package.xml
rl_grasp/launch/: baxter_rl_grasp.launch
rl_grasp/scripts/: baxter_env.py  ddpg.py  dqn.py  pick_and_place_demo.py  replay_buffer.py
